--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,6 +124,19 @@
             android:layout_marginRight="15dp"
             android:background="#CCCCCC"></View>
 
+        <TextView
+            android:id="@+id/confirm_custom_time_tv"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:background="@drawable/custom_confirm_click_bg"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="10dp"
+            android:text="确    定"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
     </LinearLayout>
 
 
